fixed resets by rel='stylesheet' designation, fixed section h2 with flexbox align-self:stretch

--- a/Assets/css/resets.css
+++ b/Assets/css/resets.css
@@ -10,7 +10,6 @@
   
   body {
     min-height: 100%;
-    line-height: 1;
     font-family: sans-serif;
   }
   
